2022-01-22  Tomas Rokicki  <rokicki@gmail.com>
	
	* dvips.c (landscaperotate): define new global for new option.
	(helparr): mention it in help message.
	(main): recognize -landscaperotate command-line option.
	* protos.h (landscaperotate): declare it.
	* dvips.texi (Option details, Configuration file commands,
	Config file paper sizes): document it.
	* output.c (findpapersize): only do the rotation auto-matching
	if option is set.
	* resident.c (getdefaults): recognize "landscaperotate" in config file.
	* NEWS: mention it.
	Report from Ulrike Fischer, 26 Jul 2021 09:11:29 ff.

2022-01-18  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* afm2tfm.c,
	* dvips.c,
	* dvips.h,
	* dvips.texi,
	* configure.ac: version 2022.1 and copyright 2022.

2021-11-03  Karl Berry  <karl@freefriends.org>

	* dvips.texi: PostScript not Postscript; remove broken urls;
	a couple other typos.

2021-10-24  Karl Berry  <karl@freefriends.org>

	* dvips.texi (Option details) <-l>: describe [.PAGESEQ] subvalue.
	<-p>: Just refer to -l instead of duplicating.
	* dvips.1: likewise.
	Report from Igor Liferenko, 20 Aug 2021 10:13:32.

2021-09-28  Karl Berry  <karl@freefriends.org>

	* dvips.texi (Option details) <-h>: mention that inclusion happens
	in the order given.
	(Configuration file commands) <h>: emphasize that standard headers
	are not included.
	Report from Igor Liferenko, tex-k 28 Sep 2021 14:39:22.

2021-04-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvips.h, configure.ac:
	Add TeX Live version to banner.

2021-04-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {pprescan,scanpage}.c:
	Fix bug in fallback multibyte character in virtual font for (u)pTeX.
	Thanks 流橋 利樹-san for the report.
	https://oku.edu.mie-u.ac.jp/tex/mod/forum/discuss.php?d=3068

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-02-17  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* afm2tfm.c,
	* dvips.c,
	* dvips.h,
	* dvips.texi,
	* configure.ac: version 2021.1 and copyright 2021.
